--- a/DatingApp.API/wwwroot/index.html
+++ b/DatingApp.API/wwwroot/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.a7906bc6f34ab763ce61.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.bacc47fd511b34ab65b8.js"></script><script type="text/javascript" src="scripts.00aef30835fc60cdc996.js"></script><script type="text/javascript" src="main.ea947079f82663b7e449.js"></script></body>
 </html>
